# project-init

./: .gitignore  .shellcheckrc  CHANGELOG.md  README.md  VERSION  dependencies.txt  files.txt  icon.ascii.txt  initmain.sh  libform.sh  libinit.sh  project.properties  quickinit.sh  quickstart.sh  release.sh  test.sh
.github/: CODEOWNERS  release-notes.md
addons/: .gitignore  README.md  after-init-hook.sh  description.txt  files.txt  icon.ascii.txt  load-hook.sh  project.properties  quickstart.sh  test.sh  title.txt
bootstrap/: README.md  install.sh  run.sh
c/: README.md  init.sh  var_script_test_isolated_opt.txt
c/01_executable/source/: CMakeLists.txt  Dependencies.cmake  README.md  build.sh  test.sh
c/01_executable/source/.docker/: controls.sh  entrypoint.sh
c/01_executable/source/cmake/: ConfigUnity.cmake  DependencyUtil.cmake  SanitizerUtil.cmake  TestUtil.cmake
c/01_executable/source/src/main/: CMakeLists.txt
c/01_executable/source/src/main/c/: application.c  application.h  example.c  example.h  main.c
c/01_executable/source/src/main/tests/: CMakeLists.txt
c/01_executable/source/src/main/tests/c/: test_application.c  test_example.c
c/02_library/source/: .clang-tidy  CMakeLists.txt  Dependencies.cmake  README.md  build.sh  test.sh
c/02_library/source/.docker/: Dockerfile-build
c/02_library/source/cmake/: ConfigUnity.cmake  SanitizerUtil.cmake
c/02_library/source/src/main/: CMakeLists.txt
c/02_library/source/src/main/c/: example.c
c/02_library/source/src/main/include/: example.h
c/02_library/source/src/main/tests/: CMakeLists.txt
c/02_library/source/src/main/tests/c/: test_example.c
cpp/: README.md  init.sh  var_script_build_isolated_argarray.txt  var_script_build_isolated_main.txt
cpp/01_executable/source/src/main/: CMakeLists.txt
cpp/01_executable/source/src/main/cpp/: Main.cpp
cpp/01_executable/source/src/main/cpp/namespace/: Application.cpp  Application.h
cpp/01_executable/source/src/main/tests/cpp/namespace/: ApplicationTest.cpp
cpp/02_library/source/src/main/: CMakeLists.txt
cpp/02_library/source/src/main/cpp/namespace/: StringGenerator.cpp
cpp/02_library/source/src/main/include/namespace/: StringGenerator.h
cpp/02_library/source/src/main/tests/: CMakeLists.txt
cpp/02_library/source/src/main/tests/cpp/namespace/: StringGeneratorTest.cpp
cpp/03_server-poco/source/src/main/: CMakeLists.txt
cpp/03_server-poco/source/src/main/cpp/: Main.cpp
cpp/03_server-poco/source/src/main/cpp/namespace/: ExampleControllerHTTP.cpp  ExampleControllerHTTP.h  ExampleControllerWS.cpp  ExampleControllerWS.h  ExampleRouter.cpp  ExampleRouter.h  Server.cpp  Server.h  StringProcessor.cpp  StringProcessor.h
cpp/03_server-poco/source/src/main/resources/: index.html
cpp/03_server-poco/source/src/main/tests/: CMakeLists.txt
cpp/03_server-poco/source/src/main/tests/cpp/namespace/: ApplicationTest.cpp
cpp/03_server-poco/source/src/net/: CMakeLists.txt
cpp/03_server-poco/source/src/net/cpp/raven/net/: BasicRouterHTTP.cpp  ControllerHTTP.cpp  DefaultErrorHandler.cpp  DefaultErrorHandler.h  DefaultRequestHandler.cpp  DefaultRequestHandler.h  DefaultRequestHandlerFactory.cpp  DefaultRequestHandlerFactory.h  Message.cpp  RequestHTTP.cpp  ResponseHTTP.cpp  ServerRequestProviderHTTP.cpp  ServerRequestProviderHTTP.h  ServerResponseProviderHTTP.cpp  ServerResponseProviderHTTP.h  ServerTCP.cpp  Session.cpp  SessionHandler.cpp  SessionHandler.h  WebSocketController.cpp  WebSocketDispatcher.cpp  WebSocketHandler.cpp  WebSocketReader.cpp  WebSocketReader.h  WebSocketRequestHandler.cpp  WebSocketRequestHandler.h  WebSocketSessionProvider.cpp  WebSocketSessionProvider.h  WebSocketWriter.cpp  WebSocketWriter.h  WebSocketWriterQueue.cpp
cpp/03_server-poco/source/src/net/cpp/raven/util/: Log.cpp
cpp/03_server-poco/source/src/net/include/raven/net/: ControllerHTTP.h  Message.h  RequestHTTP.h  ResponseHTTP.h  RouterHTTP.h  ServerTCP.h  Session.h  WebSocketController.h  WebSocketDispatcher.h  WebSocketHandler.h
cpp/03_server-poco/source/src/net/include/raven/util/: Log.h
cpp/03_server-poco/source/src/net/tests/: CMakeLists.txt
cpp/03_server-poco/source/src/net/tests/cpp/raven/net/: NetTest.cpp
cpp/04_desktop_imgui/source/: CMakeLists.txt  Dependencies.cmake  README.md  build.sh  test.sh
cpp/04_desktop_imgui/source/cmake/: ConfigGlfw.cmake  TestCoverageCleanupUtil.cmake
cpp/04_desktop_imgui/source/src/main/: CMakeLists.txt
cpp/04_desktop_imgui/source/src/main/cpp/: Main.cpp
cpp/04_desktop_imgui/source/src/main/cpp/namespace/: Application.cpp  Application.h  Window.cpp  Window.h
cpp/04_desktop_imgui/source/src/main/tests/cpp/namespace/: ApplicationTest.cpp
cpp/04_desktop_imgui/source/src/main/tests/resources/: placeholder.txt
docs/: generate_api_docs.py
java/: README.md  init.sh
js/: README.md  init.sh  var_script_run_isolated_main.txt
licenses/: README.md  extension_map.txt
python/: README.md  init.sh  var_readme_dev_deploy.txt  var_readme_dev_lint.txt  var_script_build_isolated_argparse.txt  var_script_build_isolated_opt.txt  var_script_test_lint_arg.txt  var_script_test_lint_arg_parse.txt  var_script_test_lint_code.txt  var_script_test_lint_help.txt
r/: README.md  init.sh  var_script_build_isolated_hint1.txt  var_script_build_isolated_opt.txt  var_script_test_isolated_main.txt
share/python/: pylintrc  pyproject.toml  requirements.txt  setup.sh  standalone_main.py
share/python/docker/: Dockerfile-build  controls.sh
tests/: bash_tests.sh  compatibility_tests.sh  functionality_test_driver.sh  functionality_tests.sh  test_compat_awk.sh  test_compat_basename.sh  test_compat_cut.sh  test_compat_date.sh  test_compat_dirname.sh  test_compat_find.sh  test_compat_grep.sh  test_compat_head.sh  test_compat_sed.sh  test_compat_seq.sh  test_compat_sort.sh  test_compat_tr.sh  test_compat_xargs.sh  test_func_addon_language_type.sh  test_func_addon_project_type.sh  test_func_addon_quickstart.sh  test_func_c_executable.sh  test_func_c_library.sh  test_func_c_linux_kernel_module.sh  test_func_c_main.sh  test_func_cpp_desktop_imgui.sh  (+24 more)
(+474 files in other folders)
